--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,51 +42,60 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
 
-    // Navigation
-    implementation 'androidx.navigation:navigation-fragment-ktx:2.2.1'
-    implementation 'androidx.navigation:navigation-ui-ktx:2.2.1'
-    implementation 'androidx.navigation:navigation-fragment:2.2.1'
-    implementation 'androidx.navigation:navigation-ui:2.2.1'
+// Navigation
+    implementation "android.arch.navigation:navigation-fragment:$navigation_version"
+    implementation "android.arch.navigation:navigation-ui:$navigation_version"
+    implementation "android.arch.navigation:navigation-fragment-ktx:$navigation_version"
+    implementation "android.arch.navigation:navigation-ui-ktx:$navigation_version"
 
-    // Room DB call
+    implementation "androidx.core:core-ktx:1.2.0"
+    implementation "androidx.constraintlayout:constraintlayout:1.1.3"
+
+    // Room
     implementation "androidx.room:room-runtime:$room_version"
+    implementation "androidx.legacy:legacy-support-v4:1.0.0"
+    implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0'
     kapt "androidx.room:room-compiler:$room_version"
 
-    // ViewModel
-    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
-    implementation "androidx.lifecycle:lifecycle-extensions:$lifecycle_version"
+    // Gson
+    implementation "com.google.code.gson:gson:2.8.5"
 
-    //Gson json parser
-    implementation 'com.google.code.gson:gson:2.8.5'
-
-    //Kotlin Android Coroutines async fun
+    // Kotlin Android Coroutines
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.5'
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.5'
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.5"
 
-    //Retrofit call requests
-    implementation 'com.squareup.retrofit2:retrofit:2.3.0'
+    // Retrofit
+    implementation "com.squareup.retrofit2:retrofit:$retrofit_version"
+    implementation "com.squareup.retrofit2:converter-gson:$retrofit_version"
+    implementation 'com.jakewharton.retrofit:retrofit2-kotlin-coroutines-adapter:0.9.2'
 
-    //Kodein
-    implementation 'org.kodein.di:kodein-di-generic-jvm:6.5.0'
-    implementation 'org.kodein.di:kodein-di-framework-android-x:6.5.0'
+    // ViewModel
+    implementation "androidx.lifecycle:lifecycle-extensions:$lifecycle_version"
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
+    kapt "androidx.lifecycle:lifecycle-compiler:$lifecycle_version"
 
-    // datetime support
-    implementation 'com.jakewharton.threetenabp:threetenabp:1.2.3'
+    // Kodein
+    implementation "org.kodein.di:kodein-di-generic-jvm:$kodein_version"
+    implementation "org.kodein.di:kodein-di-framework-android-x:$kodein_version"
 
-    //Glide lib for images
+    // Better dateTime-time support even on older Android versions
+    implementation "com.jakewharton.threetenabp:threetenabp:1.2.3"
+
+    // Glide
     implementation 'com.github.bumptech.glide:glide:4.11.0'
     kapt 'com.github.bumptech.glide:compiler:4.11.0'
 
-    // Groupie is a simple, flexible library for complex RecyclerView layouts.
-    implementation "com.xwray:groupie:$groupie_version"
-    implementation "com.xwray:groupie-databinding:$groupie_version"
+    // Groupie RecyclerView
+    implementation 'com.xwray:groupie:2.8.0'
+    implementation 'com.xwray:groupie-kotlin-android-extensions:2.1.0'
 
     // Preference
-    implementation "androidx.preference:preference-ktx:$preference_version"
+    implementation "androidx.preference:preference:1.1.0"
 
-    //Location
-    implementation 'com.google.android.gms:play-services-location:17.0.0'
+    // WeatherLocation
+    implementation "com.google.android.gms:play-services-location:17.0.0"
 
-    //Material Design
-    implementation 'com.google.android.material:material:1.1.0'
+    // New Material Design
+    implementation "com.google.android.material:material:1.1.0"
 }
