--- a/build.gradle
+++ b/build.gradle
@@ -6,13 +6,16 @@ buildscript {
     ext.lifecycle_version = '2.2.0'
     ext.groupie_version = '2.8.0'
     ext.preference_version = "1.1.0"
+    ext.navigation_version = '1.0.0-alpha06'
+    ext.retrofit_version = '2.4.0'
+    ext.kodein_version = '6.5.0'
     repositories {
         google()
         jcenter()
         
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.6.1'
+        classpath 'com.android.tools.build:gradle:3.6.2'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath "android.arch.navigation:navigation-safe-args-gradle-plugin:1.0.0"
 
